--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -276,6 +276,9 @@ jobs:
           name: Central Server system test
           path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
           reporter: java-junit
+      - name: Fix system-test build dir permissions
+        run: sudo chown -R $USER src/central-server/admin-service/ui-system-test/build/cs-container-logs/
+        if: failure()
       - name: Upload CS screenshots
         if: failure()
         uses: actions/upload-artifact@v4
@@ -289,6 +292,7 @@ jobs:
           name: CS System Test report
           path: |
             src/central-server/admin-service/ui-system-test/build/allure-report/
+            src/central-server/admin-service/ui-system-test/build/cs-container-logs/
       - name: Show Energy Results
         uses: green-coding-solutions/eco-ci-energy-estimation@v5.0
         with:
