--- a/development/docker/security-server/compose.yaml
+++ b/development/docker/security-server/compose.yaml
@@ -1,7 +1,7 @@
 services:
   openbao:
-    build:
-      context: openbao/
+    image: ${OPENBAO_DEV_IMG}
+    pull_policy: always
     environment:
       - BAO_ADDR=http://0.0.0.0:8200
       - BAO_DEV_ROOT_TOKEN_ID=${XROAD_SECRET_STORE_TOKEN}
@@ -11,8 +11,6 @@ services:
       test: [ "CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true" ]
     networks:
       - xrd-ss-network
-    volumes:
-      - ../../../deployment/native-packages/src/xroad/common/secret-store-local/usr/share/xroad/scripts/:/scripts
   db-serverconf:
     image: postgres:16
     environment:
@@ -273,7 +271,7 @@ services:
     image: ${PROXY_UI_IMG}
     pull_policy: always
     environment:
-      - DEBUG=true
+      - DEBUG=false
       - XROAD_HOST=ui
       - XROAD_SECRET_STORE_HOST=openbao
       - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
@@ -328,7 +326,9 @@ services:
       test: [ "CMD", "curl", "-f", "-k", "http://localhost:4099/q/health" ]
     networks:
       - xrd-ss-network
-
+    depends_on:
+      openbao:
+        condition: service_healthy
 networks:
   xrd-ss-network:
     driver: bridge
