chore: improve ss system test container usage
Refs: XRDDEV-3003

--- a/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
+++ b/src/security-server/e2e-test/src/intTest/resources/compose.ss-hsm.e2e.yaml
@@ -2,7 +2,7 @@ services:
   signer:
     image: ss-signer-with-hsm:latest # this is the name of image that is built from context below
     build:
-      context: ../../../development/docker/security-server/signer-with-hsm
+      context: ../../../../../../development/docker/security-server/signer-with-hsm
       args:
         - BASE_SIGNER_IMAGE=${SIGNER_IMG:-localhost:5555/ss-signer:latest}
       dockerfile: Dockerfile
