chore: proxy-ui-api, signer, monitor, proxy db connection settings
Refs: XRDDEV-3001

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -10,8 +10,12 @@ spring:
     username: ${xroad.db.serverconf.hibernate.connection.username}
     password: ${xroad.db.serverconf.hibernate.connection.password}
     hikari:
+      pool-name: ${spring.application.name}-db-pool
+      maximum-pool-size: 5
+      minimum-idle: 1
       data-source-properties:
         currentSchema: ${xroad.db.serverconf.hibernate.hikari.dataSource.currentSchema:public}
+        ApplicationName: ${spring.application.name}
   jpa:
     open-in-view: false
     hibernate:
@@ -54,6 +58,13 @@ server:
         same-site: Strict
 
 xroad:
+  db:
+    serverconf:
+      hibernate:
+        hikari.poolName: ${spring.application.name}-serverconf-pool
+        hikari.maximumPoolSize: 5
+        hikari.minimumIdle: 1
+        hikari.dataSource.ApplicationName: ${spring.application.name}-serverconf
   common-global-conf:
     refresh-rate: -1 # UI has its own refresh job.
   proxy-ui-api:
