--- a/src/service/proxy/proxy-application/src/main/resources/application.yaml
+++ b/src/service/proxy/proxy-application/src/main/resources/application.yaml
@@ -55,6 +55,10 @@ quarkus:
               rotate-on-boot: false
 
 xroad:
+  db:
+    serverconf:
+      hibernate:
+        hikari.dataSource.ApplicationName: ${quarkus.application.name}
   proxy:
     tls:
       certificate-provisioning:
