chore: Add test coverage for messagelog archiver

--- a/deployment/security-server/base-images/Dockerfile-baseline
+++ b/deployment/security-server/base-images/Dockerfile-baseline
@@ -8,6 +8,7 @@ RUN groupadd --system --gid 999 xroad && \
     --gid xroad xroad
 
 RUN mkdir /var/log/xroad && \
+    mkdir /var/lib/xroad && \
     mkdir /var/tmp/xroad && \
     mkdir /var/cache/xroad && \
 #    mkdir /opt/app/cache && \
@@ -15,6 +16,7 @@ RUN mkdir /var/log/xroad && \
     mkdir -p /etc/xroad/globalconf && \
 #    chown -R xroad:xroad /optapp && \
     chown -R xroad:xroad /var/log/xroad && \
+    chown -R xroad:xroad /var/lib/xroad && \
     chown -R xroad:xroad /var/tmp/xroad && \
     chown -R xroad:xroad /var/cache/xroad && \
     chown -R xroad:xroad /etc/xroad
