--- a/src/security-server/admin-service/application/src/main/resources/application-int-test.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application-int-test.yml
@@ -11,6 +11,8 @@ xroad:
   proxy-ui-api:
     cache-default-ttl: -1
     cache-api-key-ttl: -1
+  message-log-archiver:
+    enabled: false
 
 server:
   ssl:
