--- a/src/security-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application-test.yml
@@ -32,6 +32,8 @@ xroad:
         jdbc:
           use_streams_for_binary: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  message-log-archiver:
+    enabled: false
   common-rpc:
     use-tls: false
 
