--- a/src/security-server/system-test/src/intTest/resources/application-override.yml
+++ b/src/security-server/system-test/src/intTest/resources/application-override.yml
@@ -24,21 +24,4 @@ test-automation:
     testable-container:
       enabled: false
   selenide:
-    browser: CHROME # Options: CHROME, EDGE, FIREFOX, OPERA, SAFARI (works only with Mac)
-    browser-size: "1920x1080"
-    driver-manager-enabled: true
-    headless: true
-    chrome-options-args: "--guest,--disable-features=OptimizationHints"
-    timeout: 15000
-    page-load-timeout: 25000
-    screenshots: true
-    proxy-enabled: true # Proxy is required for file downloads.
-    proxy-host: 127.0.0.1
-    file-download: proxy
-  custom:
-    image-name: "xrd-securityserver-dev:latest"
-
-# toggle for reusable containers. This allows quicker test development as containers are not destroyed between runs.
-# WARNING: this leaves containers running indefinitely. They have to be stopped manually.
-# Note: this required testcontainers.reuse.enable=true property to be defined in your ~/.testcontainers.properties file
-reuse-between-runs: false
+    enabled: true
