chore: improve selenide test setup
Refs: XRDDEV-3003

--- a/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
+++ b/src/central-server/admin-service/ui-system-test/src/intTest/resources/application-override.yml
@@ -12,7 +12,7 @@ logging:
 test-automation:
   report-name: xroad-cs-ui-test-suite
   environment: disposable
-  spring-component-scan: "org.niis.xroad.cs.test"
+  spring-component-scan: "org.niis.xroad.common.test,org.niis.xroad.cs.test"
   cucumber:
     execution:
       parallel:
