fix: X-Road to CamDX and SNAPSHOT to release

--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx1536m
 
 xroadVersion=7.7.0
-xroadBuildType=SNAPSHOT
+xroadBuildType=RELEASE
 xroadPublishUrl=
 xroadPublishUser=
 xroadPublishApiKey=
