--- a/.github/workflows/_build-and-package.yml
+++ b/.github/workflows/_build-and-package.yml
@@ -240,6 +240,13 @@ jobs:
             --packages-path ${{ github.workspace }}/deployment/native-packages/build/ubuntu24.04 \
             --platforms linux/amd64
 
+      - name: Build development images
+        working-directory: ./development/docker
+        run: |
+          IMAGE_REGISTRY=${{ env.IMAGE_REGISTRY }} \
+          IMAGE_TAG=${{ env.SERVICE_IMAGE_TAG }} \
+            ./build-dev-images.sh --push
+
       - name: Log storage after all packaging
         if: always()
         uses: ./.github/actions/log-storage
