--- a/src/gradle.properties
+++ b/src/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx1536m
 
-xroadVersion=8.0.0
+xroadVersion=8.0.0-beta1
 xroadBuildType=SNAPSHOT
 xroadPublishUrl=
 xroadPublishUser=
