chore: Integrate messagelog archiver into Proxy UI API (#2992)
* chore: Integrate messagelog archiver into Proxy UI API

* chore: Integrate messagelog archiver into Proxy UI API

* chore: Add test coverage for messagelog archiver

* fix: build

* fix: merge fixes

* chore: Migrate messagelog db schema setup to proxy & Drop messagelog addon from native packaging

--- a/deployment/security-server/images/base-images/baseline/Dockerfile
+++ b/deployment/security-server/images/base-images/baseline/Dockerfile
@@ -9,11 +9,13 @@ RUN groupadd --system --gid 999 xroad && \
     --gid xroad xroad
 
 RUN mkdir /var/log/xroad && \
+    mkdir /var/lib/xroad && \
     mkdir /var/tmp/xroad && \
     mkdir /var/cache/xroad && \
     mkdir -p /etc/xroad/ssl && \
     mkdir -p /etc/xroad/globalconf && \
     chown -R xroad:xroad /var/log/xroad && \
+    chown -R xroad:xroad /var/lib/xroad && \
     chown -R xroad:xroad /var/tmp/xroad && \
     chown -R xroad:xroad /var/cache/xroad && \
     chown -R xroad:xroad /etc/xroad
