--- a/deployment/security-server/k8s/charts/security-server/values.yaml
+++ b/deployment/security-server/k8s/charts/security-server/values.yaml
@@ -183,6 +183,9 @@ services:
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME: "serverconf"
       XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
+      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL: "jdbc:postgresql://db-messagelog.ss.svc.cluster.local:5432/messagelog"
+      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_USERNAME: "messagelog"
+      XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_DRIVER_CLASS: "org.postgresql.Driver"
       XROAD_PROXY_UI_API_MANAGEMENT_PROXY_SERVER_URL: "https://proxy.ss.svc.cluster.local:8443"
       DB_CONFIG_SOURCE_ENABLED: "true"
       DB_CONFIG_SOURCE_URL: "jdbc:postgresql://db-serverconf.ss.svc.cluster.local:5432/serverconf"
@@ -194,35 +197,12 @@ services:
       - name: "XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD"
         secretName: "db-serverconf"
         key: "password"
+      - name: "XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_PASSWORD"
+        secretName: "db-messagelog"
+        key: "password"
       - name: "DB_CONFIG_SOURCE_PASSWORD"
         secretName: "db-serverconf"
         key: "password"
-  messagelog-archiver:
-    image: localhost:5555/ss-message-log-archiver:latest
-    imagePullPolicy: IfNotPresent
-    resources:
-      requests:
-        memory: 64Mi
-      limits:
-        memory: 512Mi
-    ports:
-      - port: 4099
-        name: http
-    readinessProbe:
-      path: "/q/health"
-      scheme: "HTTP"
-    debugPort: 9999
-    serviceAccount:
-      annotations: { }
-    env:
-      DEBUG_PORT: "9999"
-      XROAD_HOST: "messagelog-archiver.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
-      XROAD_SECRET_STORE_SCHEME: "http"
-    envFromSecrets:
-      - name: "XROAD_SECRET_STORE_TOKEN"
-        secretName: "xroad-token"
-        key: "XROAD_SECRET_STORE_TOKEN"
   monitor:
     image: localhost:5555/ss-monitor:latest
     imagePullPolicy: IfNotPresent
