--- a/deployment/native-packages/src/xroad/ubuntu/generic/control
+++ b/deployment/native-packages/src/xroad/ubuntu/generic/control
@@ -122,7 +122,7 @@ Description: X-Road security server with the Faroe Islands' settings
 Package: xroad-opmonitor
 Conflicts: xroad-center
 Architecture: all
-Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-confclient (=${binary:Version})
+Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-confclient (=${binary:Version}), yq
 Pre-Depends: xroad-database-local (=${binary:Version}) | xroad-database-remote (=${binary:Version})
 Description: X-Road operations monitoring daemon
  X-Road operations monitoring daemon
