chore: review and test CS and SS native setup (#3031)
* chore: initial version of x-road 8 CS installation guide

Refs: XRDDEV-3001

* chore: proxy-ui-api, signer, monitor, proxy db connection settings

Refs: XRDDEV-3001

* chore: set the slot-ids for softhsm token

* chore: update xrd8 cs installation guide

Refs: XRDDEV-3001

* chore: update xrd8 cs installation guide

Refs: XRDDEV-3001

* chore: setting proxy-ui-api, proxy internal tls subject cn and alt names

Refs: XRDDEV-2997

* chore: SS native setup guide initial version

Refs: XRDDEV-3000

* chore: SS native setup guide initial version

Refs: XRDDEV-3000

* chore: SS native setup guide initial version

Refs: XRDDEV-3000

* chore: clean up in deb installation scripts

Refs: XRDDEV-3000

* chore: op-monitor tls provisioning settings

Refs: XRDDEV-3000

* chore: tls provisioning settings for rhel

Refs: XRDDEV-3000

* chore: tls provisioning settings for rhel fix

Refs: XRDDEV-3000

* chore: update deb repo in installation manuals

Refs: XRDDEV-3000

* chore: yq dep for xroad-opmonitor package

Refs: XRDDEV-3000

* chore: remove docs from PR

--- a/deployment/native-packages/src/xroad/ubuntu/generic/control
+++ b/deployment/native-packages/src/xroad/ubuntu/generic/control
@@ -71,7 +71,7 @@ Description: X-Road security server
 Package: xroad-proxy
 Conflicts: xroad-center, xroad-confproxy, xroad-addon-messagelog
 Architecture: all
-Depends: ${misc:Depends}, rsyslog, curl, systemd, xroad-confclient (=${binary:Version}), xroad-signer (=${binary:Version}), openjdk-21-jre-headless | java21-runtime-headless | java21-runtime
+Depends: ${misc:Depends}, rsyslog, curl, systemd, xroad-confclient (=${binary:Version}), xroad-signer (=${binary:Version}), openjdk-21-jre-headless | java21-runtime-headless | java21-runtime, yq
 Pre-Depends: xroad-database-local (=${binary:Version}) | xroad-database-remote (=${binary:Version}), xroad-base (=${binary:Version})
 Replaces: xroad-addon-messagelog
 Description: X-Road security server
@@ -122,7 +122,7 @@ Description: X-Road security server with the Faroe Islands' settings
 Package: xroad-opmonitor
 Conflicts: xroad-center
 Architecture: all
-Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-confclient (=${binary:Version})
+Depends: ${misc:Depends}, xroad-base (=${binary:Version}), xroad-confclient (=${binary:Version}), yq
 Pre-Depends: xroad-database-local (=${binary:Version}) | xroad-database-remote (=${binary:Version})
 Description: X-Road operations monitoring daemon
  X-Road operations monitoring daemon
@@ -138,7 +138,7 @@ Description: Automatic token pin code entry
 Package: xroad-proxy-ui-api
 Architecture: all
 Pre-Depends: xroad-base (=${binary:Version})
-Depends: ${misc:Depends}, xroad-proxy (=${binary:Version})
+Depends: ${misc:Depends}, xroad-proxy (=${binary:Version}), yq
 Replaces: xroad-nginx, xroad-jetty9
 Breaks: xroad-nginx, xroad-jetty9
 Description: X-Road proxy UI REST API
