chore: openbao version bump
Refs: XRDDEV-3017

--- a/development/docker/security-server/openbao/Dockerfile
+++ b/development/docker/security-server/openbao/Dockerfile
@@ -1,4 +1,4 @@
-FROM openbao/openbao:latest
+FROM openbao/openbao:2.4.1
 
 RUN apk add --no-progress jq bash > /dev/null 2>&1
 # creating xroad user and folder to reuse the secret-store-init.sh script
